Make `.eslintrc` match `.editorconfig`
run `npm update` found 0 vulnerabilities

Add `lint:fix` to scripts.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "main": "src/index.js",
     "scripts": {
         "lint": "eslint src test",
+        "lint:fix": "eslint --fix src test",
         "test": "mocha test/**/*.spec.js",
         "coverage": "nyc --reporter=lcov --reporter=text npm run test"
     },
